[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Dice/dice_6.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_mask = 2
script = ExtResource( 1 )

[node name="DiceSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.35, 0.35 )

[node name="DetectDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectDamage"]
shape = SubResource( 2 )

[node name="Bash" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bash"]
shape = SubResource( 3 )

[node name="ComboText" type="Label" parent="."]
visible = false
margin_left = 8.0
margin_top = -32.0
margin_right = 48.0
margin_bottom = -18.0
rect_rotation = 18.5793

[connection signal="body_entered" from="DetectDamage" to="." method="_on_DetectDamage_body_entered"]
[connection signal="body_entered" from="Bash" to="." method="_on_Bash_body_entered"]
